# gonka-tools

./: .cursorrules  .gitignore  README.md  gonka  pyproject.toml  requirements.txt
config/: env.example  nodes.yaml  nodes.yaml.example
gonka_tools/: __init__.py  analytics.py  cli.py  config.py  monitor.py  setup.py
scripts/: cleanup.sh  install_monitor.sh  quick_setup.sh  telegram_bot.py
